@@ -2,7 +2,6 @@ God.watch do |w|
   w.name = "child-events"
   w.interval = 5.seconds
   w.start = File.join(File.dirname(__FILE__), *%w[simple_server.rb])
-  w.stop = ""
   
   # determine the state on startup
   w.transition(:init, { true => :up, false => :start }) do |on|
@@ -15,6 +14,11 @@ God.watch do |w|
   w.transition(:start, :up) do |on|
     on.condition(:process_running) do |c|
       c.running = true
+    end
+    
+    on.condition(:tries) do |c|
+      c.times = 2
+      c.transition = :start
     end
   end
 
